src/test/ui/stability-attribute/allow-unstable-reexport.stderr
error[E0658]: use of unstable library feature 'unstable_test_feature'
  --> $DIR/allow-unstable-reexport.rs:20:5
   |
LL |     unstable();
   |     ^^^^^^^^
   |
   = help: add `#![feature(unstable_test_feature)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_test_feature': text
  --> $DIR/allow-unstable-reexport.rs:21:5
   |
LL |     unstable_text();
   |     ^^^^^^^^^^^^^
   |
   = help: add `#![feature(unstable_test_feature)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
